--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hi there :wave: Thank you for opening a new issue :sparkles: \nYour issue will be reviewed and assigned soon :hourglass:\nHappy Coding :smiley:'' first issue'
-        pr-message: 'Hi there :wave: Congratulations on sending your first PR :sparkles: \nYour PR will be reviewed soon :hourglass:\nHappy Coding :smiley:'' first pr'
+        issue-message: 'Hello there :wave: Thank you for opening a new issue :sparkles: \nYour issue will be reviewed and assigned soon :hourglass:\nHappy Coding :smiley:'' first issue'
+        pr-message: 'Congratulations on your first PR :sparkles: \nYour PR will be reviewed soon :hourglass:\nHappy Coding :smiley:'' first pr'
