new Bellman Ford Algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .DS_Store
 .vscode
+/.vs/slnx.sqlite
+/.vs/Data-Structures-and-Algorithms/v16/ipch/AutoPCH/4139952b9b5e1f52/BELLMAN_FORD ALGORITHM.ipch
+/.vs/Data-Structures-and-Algorithms/v16/Browse.VC.opendb
+/.vs/Data-Structures-and-Algorithms/v16/Browse.VC.db-wal
+/.vs/Data-Structures-and-Algorithms/v16/Browse.VC.db-shm
+/.vs/Data-Structures-and-Algorithms/v16/Browse.VC.db
+/.vs/Data-Structures-and-Algorithms/v16/.suo
